objects/scormanywhere__Catalog_Subscriber__c.object
<CustomObject>
    <fields>
        <fullName>scormanywhere__Catalog__c</fullName>
        <label>Catalog</label>
        <referenceTo>scormanywhere__Catalog__c</referenceTo>
        <relationshipLabel>Catalog Subscribers</relationshipLabel>
        <relationshipName>Catalog_Subscribers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Object_Id__c</fullName>
        <label>Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Catalog Subscriber</label>
    <nameField>
        <displayFormat>CSN-{0000}</displayFormat>
        <label>Catalog Subscriber Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catalog Subscribers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>